objects/G2Crowd__G2_Event_Aggregate__c.object
<CustomObject>
    <fields>
        <fullName>G2Crowd__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>G2 Event Aggregates</relationshipLabel>
        <relationshipName>G2_Event_Aggregates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Event_Count__c</fullName>
        <label>Event Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Page_Type__c</fullName>
        <formula>if (G2Crowd__Tag__c == &apos;ad.category_competitor.product_left_sidebar&apos;, &apos;Sponsored Content&apos;, 
if (G2Crowd__Tag__c == &apos;ad.self_promotion.product_profile_right_sidebar&apos;, &apos;Sponsored Content&apos;, 
if (G2Crowd__Tag__c == &apos;ad.self_promotion.product_sidebar_chat&apos;, &apos;Sponsored Content&apos;, 
if (G2Crowd__Tag__c == &apos;categories.features&apos;, &apos;Category Features Tab&apos;, 
if (G2Crowd__Tag__c == &apos;categories.research&apos;, &apos;Category Research Tab&apos;, 
if (G2Crowd__Tag__c == &apos;categories.show&apos;, &apos;Category Page&apos;, 
if (G2Crowd__Tag__c == &apos;comparisons.show&apos;, &apos;Comparison&apos;, 
if (G2Crowd__Tag__c == &apos;products.apps&apos;, &apos;Product Apps&apos;, 
if (G2Crowd__Tag__c == &apos;products.competitors&apos;, &apos;Product Competitors&apos;, 
if (G2Crowd__Tag__c == &apos;products.details&apos;, &apos;Product Details&apos;, 
if (	G2Crowd__Tag__c == &apos;products.discuss&apos;, &apos;Product Q&amp;A&apos;, 
if (G2Crowd__Tag__c == &apos;products.features&apos;, &apos;Product Features&apos;, 
if (G2Crowd__Tag__c == &apos;products.pricing&apos;, &apos;Product Pricing&apos;, 
if (G2Crowd__Tag__c == &apos;products.reviews&apos;, &apos;Product Reviews&apos;, G2Crowd__Tag__c) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2Crowd__Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Timeframe__c</fullName>
        <formula>IF( TEXT(G2Crowd__Period__c) == &apos;1&apos;, &apos;Day&apos;, IF( TEXT(G2Crowd__Period__c) == &apos;7&apos;, &apos;Week&apos;, IF( TEXT(G2Crowd__Period__c) == &apos;30&apos;, &apos;Month&apos;, &apos;Older&apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timeframe</label>
        <type>Text</type>
    </fields>
    <label>G2 Event Aggregate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Event Aggregates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>